eventApplication/src/main/resources/deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: springboot-postgres-k8s
  labels:
    name: springboot-postgres-k8s
spec:
  ports:
    - nodePort: 30163
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-postgres-k8s
  type: NodePort
#load balancer here instead of type NodePort
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-postgres-k8s
spec:
  selector:
    matchLabels:
      app: springboot-postgres-k8s
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-postgres-k8s
    spec:
      containers:
        - name: springboot-postgres-k8s
          image: magazargaryan/springboot-postgres-k8s:2.0
          ports:
            - containerPort: 8080
